added JDK10 support