@@ -1,4 +1,5 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>de.codesourcery.versiontracker</groupId>
   <artifactId>versiontracker-parent</artifactId>
@@ -20,6 +21,48 @@
 
   <profiles>
     <profile>
+      <id>jdk10</id>
+      <activation>
+        <activeByDefault>false</activeByDefault>
+        <jdk>10</jdk>
+      </activation>
+      <properties>
+        <javac.source>1.8</javac.source>
+        <javac.target>1.8</javac.target>
+        <javac.release>10</javac.release>
+        <myclassifier>jdk10</myclassifier>
+      </properties>
+      <build>
+        <resources>
+          <resource>
+            <directory>src/main/resources</directory>
+            <excludes>
+              <exclude>rebel.xml</exclude>
+              <exclude>**/rebel.xml</exclude>
+            </excludes>
+          </resource>
+        </resources>
+        <pluginManagement>
+          <plugins>
+            <plugin>
+              <artifactId>maven-compiler-plugin</artifactId>
+              <version>3.7.0</version>
+              <configuration>
+                <source>${javac.source}</source>
+                <target>${javac.target}</target>
+                <release>${javac.release}</release>
+                <encoding>UTF-8</encoding>
+                <compilerArgs>
+                  <arg>--add-modules</arg>
+                  <arg>java.xml.bind</arg>
+                </compilerArgs>
+              </configuration>
+            </plugin>
+          </plugins>
+        </pluginManagement>
+      </build>
+    </profile>
+    <profile>
       <id>jdk9</id>
       <activation>
         <activeByDefault>false</activeByDefault>
@@ -32,19 +75,17 @@
         <myclassifier>jdk9</myclassifier>
       </properties>
       <build>
-
-    <resources>
-      <resource>
-        <directory>src/main/resources</directory>
-        <excludes>
-          <exclude>rebel.xml</exclude>
-          <exclude>**/rebel.xml</exclude>
-        </excludes>
-      </resource>
-    </resources>
-
+        <resources>
+          <resource>
+            <directory>src/main/resources</directory>
+            <excludes>
+              <exclude>rebel.xml</exclude>
+              <exclude>**/rebel.xml</exclude>
+            </excludes>
+          </resource>
+        </resources>
         <pluginManagement>
-           <plugins>
+          <plugins>
             <plugin>
               <artifactId>maven-compiler-plugin</artifactId>
               <version>3.7.0</version>
@@ -135,30 +176,26 @@
         <classifier>${myclassifier}</classifier>
       </dependency>
       <!-- used by all sub-modules-->
-    <dependency>
-      <groupId>javax.activation</groupId>
-      <artifactId>activation</artifactId>
-      <version>1.1.1</version>
-    </dependency>
-
-    <dependency>
-      <groupId>javax.xml.bind</groupId>
-      <artifactId>jaxb-api</artifactId>
-      <version>2.3.0</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.sun.xml.bind</groupId>
-      <artifactId>jaxb-core</artifactId>
-      <version>2.3.0</version>
-    </dependency>
-
-    <dependency>
-      <groupId>com.sun.xml.bind</groupId>
-      <artifactId>jaxb-impl</artifactId>
-      <version>2.3.0</version>
-    </dependency>
-
+      <dependency>
+        <groupId>javax.activation</groupId>
+        <artifactId>activation</artifactId>
+        <version>1.1.1</version>
+      </dependency>
+      <dependency>
+        <groupId>javax.xml.bind</groupId>
+        <artifactId>jaxb-api</artifactId>
+        <version>2.3.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-core</artifactId>
+        <version>2.3.0</version>
+      </dependency>
+      <dependency>
+        <groupId>com.sun.xml.bind</groupId>
+        <artifactId>jaxb-impl</artifactId>
+        <version>2.3.0</version>
+      </dependency>
       <dependency>
         <groupId>commons-collections</groupId>
         <artifactId>commons-collections</artifactId>
